--- a/R/Preliminary_report.Rmd
+++ b/R/Preliminary_report.Rmd
@@ -847,11 +847,15 @@ knitr::include_graphics(here("Results/some_assets/responsetraits.jpg"),
 
 Now, we will do a path analysis for a simplistic mixed effect model to see the environmental effects on community stability for both taxa.
 
-```{r model_psem, echo=F, cache=T, message=F, cache.extra=list(mtime(here("Results/stability_metric_and_env_all.csv")), mtime(here("R/plot_psem.R")))}
+```{r model_psem_with_meancentering, echo=F, cache=T, message=F, cache.extra=list(mtime(here("Results/stability_metric_and_env_all.csv")), mtime(here("R/plot_psem.R")))}
+
 library(tidyverse)
 library(lme4)
 library(piecewiseSEM)
 source(here("R/plot_psem.R"))
+
+mean_centering<-TRUE
+resloc<-here("Results/res_Prelim_Report/")
 
 sm_all<-read.csv(here("Results/stability_metric_and_env_all.csv"))
 sm_all$UID<-paste(sm_all$source,sm_all$STUDY_ID,sep="_")
@@ -862,72 +866,239 @@ sm_all<-sm_all%>%dplyr::rename(
   R=nsp)
 
 sm_all$TAXA<-as.factor(sm_all$TAXA)
-#sm_all%>%group_by(TAXA)%>%summarise(n=n())%>%ungroup()
+
+#---------------- for birds -----------------------
+taxa<-"birds"
+sm_all_eachtaxa<-sm_all%>%filter(TAXA==taxa)
 
 ############ want rescaling? #################
-mydat_scaled<-sm_all
-mydat_scaled$stability<-as.numeric(scale(mydat_scaled$stability))
-mydat_scaled$R<-as.numeric(scale(mydat_scaled$R))
-mydat_scaled$VR<- as.numeric(scale(mydat_scaled$VR))
-mydat_scaled$A<- as.numeric(scale(mydat_scaled$A))
+mydat_scaled<-sm_all_eachtaxa
+mydat_scaled$stability<-as.numeric(scale(mydat_scaled$stability,
+                                         center=mean_centering,scale=T))
+mydat_scaled$R<-as.numeric(scale(mydat_scaled$R,
+                                 center=mean_centering,scale=T))
+mydat_scaled$VR<- as.numeric(scale(mydat_scaled$VR,
+                                   center=mean_centering,scale=T))
+mydat_scaled$A<- as.numeric(scale(mydat_scaled$A,
+                                  center=mean_centering,scale=T))
 
-mydat_scaled$t_med<-as.numeric(scale(mydat_scaled$t_med))
-mydat_scaled$tmax_med<-as.numeric(scale(mydat_scaled$tmax_med))
-mydat_scaled$tmin_med<-as.numeric(scale(mydat_scaled$tmin_med))
+mydat_scaled$t_med<-as.numeric(scale(mydat_scaled$t_med,
+                                     center=mean_centering,scale=T))
+mydat_scaled$tmax_med<-as.numeric(scale(mydat_scaled$tmax_med,
+                                        center=mean_centering,scale=T))
+mydat_scaled$tmin_med<-as.numeric(scale(mydat_scaled$tmin_med,
+                                        center=mean_centering,scale=T))
 
-mydat_scaled$t_skw<-as.numeric(scale(mydat_scaled$t_skw))
-mydat_scaled$tmax_skw<-as.numeric(scale(mydat_scaled$tmax_skw))
-mydat_scaled$tmin_skw<-as.numeric(scale(mydat_scaled$tmin_skw))
-mydat_scaled$t_var<-as.numeric(scale(mydat_scaled$t_var))
-mydat_scaled$trend_t_tau<-as.numeric(scale(mydat_scaled$trend_t_tau))
-mydat_scaled$t.sens.slope<-as.numeric(scale(mydat_scaled$t.sens.slope))
-mydat_scaled$t.lm.slope<-as.numeric(scale(mydat_scaled$t.lm.slope))
-
+mydat_scaled$t_skw<-as.numeric(scale(mydat_scaled$t_skw,
+                                     center=mean_centering,scale=T))
+mydat_scaled$tmax_skw<-as.numeric(scale(mydat_scaled$tmax_skw,
+                                        center=mean_centering,scale=T))
+mydat_scaled$tmin_skw<-as.numeric(scale(mydat_scaled$tmin_skw,
+                                        center=mean_centering,scale=T))
+mydat_scaled$t_var<-as.numeric(scale(mydat_scaled$t_var,
+                                     center=mean_centering,scale=T))
+mydat_scaled$trend_t_tau<-as.numeric(scale(mydat_scaled$trend_t_tau,
+                                           center=mean_centering,scale=T))
+mydat_scaled$t.sens.slope<-as.numeric(scale(mydat_scaled$t.sens.slope,
+                                            center=mean_centering,scale=T))
+mydat_scaled$t.lm.slope<-as.numeric(scale(mydat_scaled$t.lm.slope,
+                                          center=mean_centering,scale=T))
 #---  
 
+
+dat<-mydat_scaled
+n<-nrow(dat)
+#model_psem<-piecewiseSEM::psem(
+#  lmer(VR ~ R+t.sens.slope+t_med+(1|UID),data=dat),
+#  lmer(A ~ R+t.sens.slope+t_skw+(1|UID),data=dat),
+#  lmer(R~t.sens.slope+t_med+(1|UID),data=dat),
+#  lmer(stability ~ (R + VR +A)+t.sens.slope+t_skw+t_med+
+#         (1|UID), data=dat))
+model_psem<-piecewiseSEM::psem(
+  lmer(VR ~ R+t_med+t.sens.slope+(1|UID),data=dat),
+  lmer(A ~ R+t.sens.slope+t_skw+(1|UID),data=dat),
+  lmer(R~t_med+t.sens.slope+(1|UID),data=dat),
+  lmer(stability ~ (R*t_med)+VR+A+t.sens.slope+t_skw+(1|UID), data=dat))
+cc<-coefs(model_psem)
+plot_psem(n,taxa,cc,layout="circle")
+#print(summary(model_psem))
+saveRDS(model_psem,paste(resloc,"model_psem_",taxa,".RDS",sep=""))
+
+#---------------- for fish -----------------------
+taxa<-"fish"
+sm_all_eachtaxa<-sm_all%>%filter(TAXA==taxa)
+
+############ want rescaling? #################
+mydat_scaled<-sm_all_eachtaxa
+mydat_scaled$stability<-as.numeric(scale(mydat_scaled$stability,
+                                         center=mean_centering,scale=T))
+mydat_scaled$R<-as.numeric(scale(mydat_scaled$R,
+                                 center=mean_centering,scale=T))
+mydat_scaled$VR<- as.numeric(scale(mydat_scaled$VR,
+                                   center=mean_centering,scale=T))
+mydat_scaled$A<- as.numeric(scale(mydat_scaled$A,
+                                  center=mean_centering,scale=T))
+
+mydat_scaled$t_med<-as.numeric(scale(mydat_scaled$t_med,
+                                     center=mean_centering,scale=T))
+mydat_scaled$tmax_med<-as.numeric(scale(mydat_scaled$tmax_med,
+                                        center=mean_centering,scale=T))
+mydat_scaled$tmin_med<-as.numeric(scale(mydat_scaled$tmin_med,
+                                        center=mean_centering,scale=T))
+
+mydat_scaled$t_skw<-as.numeric(scale(mydat_scaled$t_skw,
+                                     center=mean_centering,scale=T))
+mydat_scaled$tmax_skw<-as.numeric(scale(mydat_scaled$tmax_skw,
+                                        center=mean_centering,scale=T))
+mydat_scaled$tmin_skw<-as.numeric(scale(mydat_scaled$tmin_skw,
+                                        center=mean_centering,scale=T))
+mydat_scaled$t_var<-as.numeric(scale(mydat_scaled$t_var,
+                                     center=mean_centering,scale=T))
+mydat_scaled$trend_t_tau<-as.numeric(scale(mydat_scaled$trend_t_tau,
+                                           center=mean_centering,scale=T))
+mydat_scaled$t.sens.slope<-as.numeric(scale(mydat_scaled$t.sens.slope,
+                                            center=mean_centering,scale=T))
+mydat_scaled$t.lm.slope<-as.numeric(scale(mydat_scaled$t.lm.slope,
+                                          center=mean_centering,scale=T))
+#---  
+dat<-mydat_scaled
+n<-nrow(dat)
+model_psem<-piecewiseSEM::psem(
+  lmer(VR ~ R+t_med+t.sens.slope+(1|UID),data=dat),
+  lmer(A ~ R+t.sens.slope+t_skw+(1|UID),data=dat),
+  lmer(R~t_med+t.sens.slope+(1|UID),data=dat),
+  lmer(stability ~ (R*t_med)+VR+A+t.sens.slope+t_skw+(1|UID), data=dat))
+cc<-coefs(model_psem)
+plot_psem(n,taxa,cc,layout="circle")
+#print(summary(model_psem))
+saveRDS(model_psem,paste(resloc,"model_psem_",taxa,".RDS",sep=""))
+```
+
+```{r model_psem_without_meancentering, echo=F, cache=T, message=F, cache.extra=list(mtime(here("Results/stability_metric_and_env_all.csv")), mtime(here("R/plot_psem.R")))}
+
+library(tidyverse)
+library(lme4)
+library(piecewiseSEM)
+source(here("R/plot_psem.R"))
+
+mean_centering<-FALSE
 resloc<-here("Results/res_Prelim_Report/")
 
-#cat("=========================== taxa = birds =============================== \n")
-taxa<-"birds"
-dat<-mydat_scaled%>%filter(TAXA==taxa)
-n<-nrow(dat)
-#model_psem<-piecewiseSEM::psem(
-#  lmer(VR ~ R+t_med+trend_t_tau+(1|UID),data=dat),
-#  lmer(A ~ R+t_skw+(1|UID),data=dat),
-#  lmer(R~t_med+trend_t_tau+(1|UID),data=dat),
-#  lmer(stability ~ (R + VR +A)+t_med+trend_t_tau+t_skw+
-#         (1|UID), data=dat))
-model_psem<-piecewiseSEM::psem(
-  lmer(VR ~ R+t.sens.slope+t_med+(1|UID),data=dat),
-  lmer(A ~ R+t.sens.slope+t_skw+(1|UID),data=dat),
-  lmer(R~t.sens.slope+t_med+(1|UID),data=dat),
-  lmer(stability ~ (R + VR +A)+t.sens.slope+t_skw+t_med+
-         (1|UID), data=dat))
-cc<-coefs(model_psem)
-plot_psem(n,taxa,cc,layout="circle")
-#print(summary(model_psem))
-saveRDS(model_psem,paste(resloc,"model_psem_",taxa,".RDS",sep=""))
+sm_all<-read.csv(here("Results/stability_metric_and_env_all.csv"))
+sm_all$UID<-paste(sm_all$source,sm_all$STUDY_ID,sep="_")
+sm_all$A<-sm_all$L+abs(sm_all$U) # total asymmetry
+sm_all<-sm_all%>%dplyr::rename(
+  stability=iCValt,
+  VR=phi_LdM,
+  R=nsp)
 
-#cat("=========================== taxa = fish =============================== \n")
-taxa<-"fish"
-dat<-mydat_scaled%>%filter(TAXA==taxa)
+sm_all$TAXA<-as.factor(sm_all$TAXA)
+
+#---------------- for birds -----------------------
+taxa<-"birds"
+sm_all_eachtaxa<-sm_all%>%filter(TAXA==taxa)
+
+############ want rescaling? #################
+mydat_scaled<-sm_all_eachtaxa
+mydat_scaled$stability<-as.numeric(scale(mydat_scaled$stability,
+                                         center=mean_centering,scale=T))
+mydat_scaled$R<-as.numeric(scale(mydat_scaled$R,
+                                 center=mean_centering,scale=T))
+mydat_scaled$VR<- as.numeric(scale(mydat_scaled$VR,
+                                   center=mean_centering,scale=T))
+mydat_scaled$A<- as.numeric(scale(mydat_scaled$A,
+                                  center=mean_centering,scale=T))
+
+mydat_scaled$t_med<-as.numeric(scale(mydat_scaled$t_med,
+                                     center=mean_centering,scale=T))
+mydat_scaled$tmax_med<-as.numeric(scale(mydat_scaled$tmax_med,
+                                        center=mean_centering,scale=T))
+mydat_scaled$tmin_med<-as.numeric(scale(mydat_scaled$tmin_med,
+                                        center=mean_centering,scale=T))
+
+mydat_scaled$t_skw<-as.numeric(scale(mydat_scaled$t_skw,
+                                     center=mean_centering,scale=T))
+mydat_scaled$tmax_skw<-as.numeric(scale(mydat_scaled$tmax_skw,
+                                        center=mean_centering,scale=T))
+mydat_scaled$tmin_skw<-as.numeric(scale(mydat_scaled$tmin_skw,
+                                        center=mean_centering,scale=T))
+mydat_scaled$t_var<-as.numeric(scale(mydat_scaled$t_var,
+                                     center=mean_centering,scale=T))
+mydat_scaled$trend_t_tau<-as.numeric(scale(mydat_scaled$trend_t_tau,
+                                           center=mean_centering,scale=T))
+mydat_scaled$t.sens.slope<-as.numeric(scale(mydat_scaled$t.sens.slope,
+                                            center=mean_centering,scale=T))
+mydat_scaled$t.lm.slope<-as.numeric(scale(mydat_scaled$t.lm.slope,
+                                          center=mean_centering,scale=T))
+#---  
+
+
+dat<-mydat_scaled
 n<-nrow(dat)
 #model_psem<-piecewiseSEM::psem(
-#  lmer(VR ~ R+t_med+trend_t_tau+(1|UID),data=dat),
-#  lmer(A ~ R+t_skw+(1|UID),data=dat),
-#  lmer(R~t_med+trend_t_tau+(1|UID),data=dat),
-#  lmer(stability ~ (R + VR +A)+t_med+trend_t_tau+t_skw+
+#  lmer(VR ~ R+t.sens.slope+t_med+(1|UID),data=dat),
+#  lmer(A ~ R+t.sens.slope+t_skw+(1|UID),data=dat),
+#  lmer(R~t.sens.slope+t_med+(1|UID),data=dat),
+#  lmer(stability ~ (R + VR +A)+t.sens.slope+t_skw+t_med+
 #         (1|UID), data=dat))
 model_psem<-piecewiseSEM::psem(
-  lmer(VR ~ R+t.sens.slope+t_med+(1|UID),data=dat),
+  lmer(VR ~ R+t_med+t.sens.slope+(1|UID),data=dat),
   lmer(A ~ R+t.sens.slope+t_skw+(1|UID),data=dat),
-  lmer(R~t.sens.slope+t_med+(1|UID),data=dat),
-  lmer(stability ~ (R + VR +A)+t.sens.slope+t_skw+t_med+
-         (1|UID), data=dat))
+  lmer(R~t_med+t.sens.slope+(1|UID),data=dat),
+  lmer(stability ~ (R*t_med)+VR+A+t.sens.slope+t_skw+(1|UID), data=dat))
 cc<-coefs(model_psem)
 plot_psem(n,taxa,cc,layout="circle")
 #print(summary(model_psem))
-saveRDS(model_psem,paste(resloc,"model_psem_",taxa,".RDS",sep=""))
+saveRDS(model_psem,paste(resloc,"model_psem_wo_meancentering_",taxa,".RDS",sep=""))
+
+#---------------- for fish -----------------------
+taxa<-"fish"
+sm_all_eachtaxa<-sm_all%>%filter(TAXA==taxa)
+
+############ want rescaling? #################
+mydat_scaled<-sm_all_eachtaxa
+mydat_scaled$stability<-as.numeric(scale(mydat_scaled$stability,
+                                         center=mean_centering,scale=T))
+mydat_scaled$R<-as.numeric(scale(mydat_scaled$R,
+                                 center=mean_centering,scale=T))
+mydat_scaled$VR<- as.numeric(scale(mydat_scaled$VR,
+                                   center=mean_centering,scale=T))
+mydat_scaled$A<- as.numeric(scale(mydat_scaled$A,
+                                  center=mean_centering,scale=T))
+
+mydat_scaled$t_med<-as.numeric(scale(mydat_scaled$t_med,
+                                     center=mean_centering,scale=T))
+mydat_scaled$tmax_med<-as.numeric(scale(mydat_scaled$tmax_med,
+                                        center=mean_centering,scale=T))
+mydat_scaled$tmin_med<-as.numeric(scale(mydat_scaled$tmin_med,
+                                        center=mean_centering,scale=T))
+
+mydat_scaled$t_skw<-as.numeric(scale(mydat_scaled$t_skw,
+                                     center=mean_centering,scale=T))
+mydat_scaled$tmax_skw<-as.numeric(scale(mydat_scaled$tmax_skw,
+                                        center=mean_centering,scale=T))
+mydat_scaled$tmin_skw<-as.numeric(scale(mydat_scaled$tmin_skw,
+                                        center=mean_centering,scale=T))
+mydat_scaled$t_var<-as.numeric(scale(mydat_scaled$t_var,
+                                     center=mean_centering,scale=T))
+mydat_scaled$trend_t_tau<-as.numeric(scale(mydat_scaled$trend_t_tau,
+                                           center=mean_centering,scale=T))
+mydat_scaled$t.sens.slope<-as.numeric(scale(mydat_scaled$t.sens.slope,
+                                            center=mean_centering,scale=T))
+mydat_scaled$t.lm.slope<-as.numeric(scale(mydat_scaled$t.lm.slope,
+                                          center=mean_centering,scale=T))
+#---  
+dat<-mydat_scaled
+n<-nrow(dat)
+model_psem<-piecewiseSEM::psem(
+  lmer(VR ~ R+t_med+t.sens.slope+(1|UID),data=dat),
+  lmer(A ~ R+t.sens.slope+t_skw+(1|UID),data=dat),
+  lmer(R~t_med+t.sens.slope+(1|UID),data=dat),
+  lmer(stability ~ (R*t_med)+VR+A+t.sens.slope+t_skw+(1|UID), data=dat))
+cc<-coefs(model_psem)
+plot_psem(n,taxa,cc,layout="circle")
+#print(summary(model_psem))
+saveRDS(model_psem,paste(resloc,"model_psem_wo_meancentering_",taxa,".RDS",sep=""))
 ```
 
 So, from the path analysis, what do we see for birds -
@@ -948,33 +1119,125 @@ and for fish -
 As I already have added the t_med as one of the variable in the path model, including again it as t_var would increase the multi-collinearity (as increasing VIF). Also we added the t_skw, so together with t_med, it should give you an estimation of whole temperature timeseries distribution - and would be better as directional metric (positive or negative skewness) than just the variability (non-directional). 
 
 
-[I separately ran models replacing t_med with t_var (see graphs below): for birds no environmental effects, for fish I found increasing variability decreases richness.]
+[I separately ran models replacing t_med with t_var (see graphs below): for birds no environmental effects due to $t_{var}$, for fish I found increasing variability decreases richness.]
 
-```{r model_psem_t_var, echo=F, cache=T, message=F, cache.extra=list(mtime(here("Results/stability_metric_and_env_all.csv")), mtime(here("R/plot_psem.R")))}
 
+```{r model_psem_t_var_with_meancentering, echo=F, cache=T, message=F, cache.extra=list(mtime(here("Results/stability_metric_and_env_all.csv")), mtime(here("R/plot_psem.R")))}
+
+library(tidyverse)
+library(lme4)
+library(piecewiseSEM)
+source(here("R/plot_psem.R"))
+
+mean_centering<-TRUE
+resloc<-here("Results/res_Prelim_Report/")
+
+sm_all<-read.csv(here("Results/stability_metric_and_env_all.csv"))
+sm_all$UID<-paste(sm_all$source,sm_all$STUDY_ID,sep="_")
+sm_all$A<-sm_all$L+abs(sm_all$U) # total asymmetry
+sm_all<-sm_all%>%dplyr::rename(
+  stability=iCValt,
+  VR=phi_LdM,
+  R=nsp)
+
+sm_all$TAXA<-as.factor(sm_all$TAXA)
+
+#---------------- for birds -----------------------
 taxa<-"birds"
-dat<-mydat_scaled%>%filter(TAXA==taxa)
-n<-nrow(dat)
-model_psem<-piecewiseSEM::psem(
-  lmer(VR ~ R+t_var+t.sens.slope+(1|UID),data=dat),
-  lmer(A ~ R+t_var+t.sens.slope+t_skw+(1|UID),data=dat),
-  lmer(R~t_var+t.sens.slope+(1|UID),data=dat),
-  lmer(stability ~ (R + VR +A)+t_var+t.sens.slope+t_skw+
-         (1|UID), data=dat))
-cc<-coefs(model_psem)
-plot_psem(n,taxa,cc,layout="circle")
+sm_all_eachtaxa<-sm_all%>%filter(TAXA==taxa)
 
-taxa<-"fish"
-dat<-mydat_scaled%>%filter(TAXA==taxa)
+############ want rescaling? #################
+mydat_scaled<-sm_all_eachtaxa
+mydat_scaled$stability<-as.numeric(scale(mydat_scaled$stability,
+                                         center=mean_centering,scale=T))
+mydat_scaled$R<-as.numeric(scale(mydat_scaled$R,
+                                 center=mean_centering,scale=T))
+mydat_scaled$VR<- as.numeric(scale(mydat_scaled$VR,
+                                   center=mean_centering,scale=T))
+mydat_scaled$A<- as.numeric(scale(mydat_scaled$A,
+                                  center=mean_centering,scale=T))
+
+mydat_scaled$t_med<-as.numeric(scale(mydat_scaled$t_med,
+                                     center=mean_centering,scale=T))
+mydat_scaled$tmax_med<-as.numeric(scale(mydat_scaled$tmax_med,
+                                        center=mean_centering,scale=T))
+mydat_scaled$tmin_med<-as.numeric(scale(mydat_scaled$tmin_med,
+                                        center=mean_centering,scale=T))
+
+mydat_scaled$t_skw<-as.numeric(scale(mydat_scaled$t_skw,
+                                     center=mean_centering,scale=T))
+mydat_scaled$tmax_skw<-as.numeric(scale(mydat_scaled$tmax_skw,
+                                        center=mean_centering,scale=T))
+mydat_scaled$tmin_skw<-as.numeric(scale(mydat_scaled$tmin_skw,
+                                        center=mean_centering,scale=T))
+mydat_scaled$t_var<-as.numeric(scale(mydat_scaled$t_var,
+                                     center=mean_centering,scale=T))
+mydat_scaled$trend_t_tau<-as.numeric(scale(mydat_scaled$trend_t_tau,
+                                           center=mean_centering,scale=T))
+mydat_scaled$t.sens.slope<-as.numeric(scale(mydat_scaled$t.sens.slope,
+                                            center=mean_centering,scale=T))
+mydat_scaled$t.lm.slope<-as.numeric(scale(mydat_scaled$t.lm.slope,
+                                          center=mean_centering,scale=T))
+#---  
+
+
+dat<-mydat_scaled
 n<-nrow(dat)
 model_psem<-piecewiseSEM::psem(
   lmer(VR ~ R+t_var+t.sens.slope+(1|UID),data=dat),
-  lmer(A ~ R+t_var+t.sens.slope+t_skw+(1|UID),data=dat),
+  lmer(A ~ R+t.sens.slope+t_skw+(1|UID),data=dat),
   lmer(R~t_var+t.sens.slope+(1|UID),data=dat),
-  lmer(stability ~ (R + VR +A)+t_var+t.sens.slope+t_skw+
-         (1|UID), data=dat))
+  lmer(stability ~ (R*t_var)+VR+A+t.sens.slope+t_skw+(1|UID), data=dat))
 cc<-coefs(model_psem)
 plot_psem(n,taxa,cc,layout="circle")
+#print(summary(model_psem))
+#---------------- for fish -----------------------
+taxa<-"fish"
+sm_all_eachtaxa<-sm_all%>%filter(TAXA==taxa)
+
+############ want rescaling? #################
+mydat_scaled<-sm_all_eachtaxa
+mydat_scaled$stability<-as.numeric(scale(mydat_scaled$stability,
+                                         center=mean_centering,scale=T))
+mydat_scaled$R<-as.numeric(scale(mydat_scaled$R,
+                                 center=mean_centering,scale=T))
+mydat_scaled$VR<- as.numeric(scale(mydat_scaled$VR,
+                                   center=mean_centering,scale=T))
+mydat_scaled$A<- as.numeric(scale(mydat_scaled$A,
+                                  center=mean_centering,scale=T))
+
+mydat_scaled$t_med<-as.numeric(scale(mydat_scaled$t_med,
+                                     center=mean_centering,scale=T))
+mydat_scaled$tmax_med<-as.numeric(scale(mydat_scaled$tmax_med,
+                                        center=mean_centering,scale=T))
+mydat_scaled$tmin_med<-as.numeric(scale(mydat_scaled$tmin_med,
+                                        center=mean_centering,scale=T))
+
+mydat_scaled$t_skw<-as.numeric(scale(mydat_scaled$t_skw,
+                                     center=mean_centering,scale=T))
+mydat_scaled$tmax_skw<-as.numeric(scale(mydat_scaled$tmax_skw,
+                                        center=mean_centering,scale=T))
+mydat_scaled$tmin_skw<-as.numeric(scale(mydat_scaled$tmin_skw,
+                                        center=mean_centering,scale=T))
+mydat_scaled$t_var<-as.numeric(scale(mydat_scaled$t_var,
+                                     center=mean_centering,scale=T))
+mydat_scaled$trend_t_tau<-as.numeric(scale(mydat_scaled$trend_t_tau,
+                                           center=mean_centering,scale=T))
+mydat_scaled$t.sens.slope<-as.numeric(scale(mydat_scaled$t.sens.slope,
+                                            center=mean_centering,scale=T))
+mydat_scaled$t.lm.slope<-as.numeric(scale(mydat_scaled$t.lm.slope,
+                                          center=mean_centering,scale=T))
+#---  
+dat<-mydat_scaled
+n<-nrow(dat)
+model_psem<-piecewiseSEM::psem(
+  lmer(VR ~ R+t_var+t.sens.slope+(1|UID),data=dat),
+  lmer(A ~ R+t.sens.slope+t_skw+(1|UID),data=dat),
+  lmer(R~t_var+t.sens.slope+(1|UID),data=dat),
+  lmer(stability ~ (R*t_var)+VR+A+t.sens.slope+t_skw+(1|UID), data=dat))
+cc<-coefs(model_psem)
+plot_psem(n,taxa,cc,layout="circle")
+#print(summary(model_psem))
 ```
 
 # Discussion
